# nrhof-matrix-kiosk

./: .env.dev  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .spotify_cache_sonos  CHANGELOG.md  LICENSE  Makefile  README.md  __version__.py  app.py  app_context.py  audio_source.py  config.yaml  config_loader.py  intent_handlers.py  localization.py  mypy.ini  nrhof-bot.desktop  nrhof-kiosk.desktop  nrhof_launcher.py  pyproject.toml  refactor_to_nrhof.sh  requirements-dev.txt  requirements.txt  ruff.toml  scene_manager.py  setup.py  test_model_renderer.py  test_voice.py  theme_loader.py  utils.py  voice_engine.py
.venv311/: pyvenv.cfg
config/: base.yaml
content/: experience1_hub.yaml  experience2_hub.yaml  experiences.yaml  intro.yaml  menu.yaml  nr38.yaml  settings.yaml  splash.yaml  video_list.yaml
core/: __init__.py  app_initializer.py  app_state.py  audio_io.py  audio_resample.py  config_loader.py  config_schema.py  event_bus.py  event_payloads.py  events.py  lifecycle.py  lifecycle_hooks.py  localization.py  logger.py  mem_probe.py  now_playing.py  observability.py  paths.py  preload_manager.py  song_recognition.py  source_manager.py  system.py  theme_loader.py  thread_pool.py  voice_diagnostics.py  voice_event_handler.py  worker_manager.py
docs/: PI_DEPLOY.md  scene_cleanup.md
integrations/: WEBFLOW_INTEGRATION.md  image_cache.py  sonos_source.py  spotify_source.py  webflow_cache.py  webflow_client.py  webflow_constants.py
layouts/: _base.yaml  hub.yaml  intro.yaml  menu.yaml  splash.yaml
logs/: voice.jsonl
nrhof/: __main__.py
overlays/: __init__.py  now_playing_overlay.py
renderers/: __init__.py  base.py  frame_state.py  pygame_renderer.py
routing/: intent_handlers.py  intent_router.py  tools.py  voice_commands.py  voice_engine.py  voice_router.py
scenes/: __init__.py  band_details_scene.py  experience1_hub_scene.py  experience1_lissajous.py  experience1_spectrum_bars.py  experience1_waveform.py  experience2_hub_scene.py  experience2_silhouette_parallax.py  intro_scene.py  menu_scene.py  nr38_scene.py  scene_cache.py  scene_factory.py  scene_manager.py  (+7 more)
ui/: tabs.py  (+9 more)
(+194 files in other folders)
