[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nrhof-matrix-kiosk"
version = "0.1.0"
description = "NRHOF Matrix Kiosk Application"
requires-python = ">=3.12"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "PL",  # pylint
    "W",   # pycodestyle warnings
    "B",   # flake8-bugbear
]
ignore = [
    "E203",  # whitespace before ':' (black compatibility)
]

[tool.ruff.lint.isort]
known-first-party = ["core", "scenes", "routing", "ui", "workers", "integrations", "renderers"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
implicit_reexport = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
